Добавлена синхронизация фото
